# labyrinth

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: README.md  about.md  generation_algorithms.md
images/animations/: README.md
images/animations/generation_algorithms/: README.md
labyrinth/: __main__.py  generate.py  graph.py  grid.py  maze.py  render.py  solve.py  ui.py
labyrinth/ui/: __init__.py  __main__.py  app.py  colors.py  common.py  menu.py
labyrinth/utils/: abc.py  collections.py  event.py
scripts/: animation.py  requirements.txt
