[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'labyrinth-py'
version = '1.0.4'
description = 'Generate and solve mazes using various algorithms'
license = 'MIT'
readme = 'README.md'
authors = ['William Dye']
keywords = [
    "dfs", "depth first search", "kruskal's algorithm", "labyrinth", "labyrinth generator", "labyrinth gui",
    "labyrinth solver", "labyrinth ui", "maze", "maze generator", "maze gui", "maze solver", "maze ui",
    "prim's algorithm", "wilson's algorithm",
]
repository = 'https://github.com/will2dye4/labyrinth.git'
packages = [{include = 'labyrinth'}]

[tool.poetry.dependencies]
python = '^3.7'

[tool.poetry.scripts]
labyrinth = 'labyrinth.__main__:main'
labyrinth-ui = 'labyrinth.__main__:gui'
maze = 'labyrinth.__main__:main'
maze-ui = 'labyrinth.__main__:gui'
